@@ -32,6 +32,7 @@ version <next>:
 - OS X VideoToolbox support
 - aphasemeter filter
 - showfreqs filter
+- vectorscope filter
 
 
 version 2.7:
